tests/fixtures/errors/bare_field_return.z
# bare_field_return.z -- returning a reftype (or generic-param) field as a
# bare read escapes a shallow copy of storage the owner still frees:
# '.copy' duplicates, '.take' moves out. Covers the concrete and the
# generic-template shapes.
H: class {
    val: String
    peek: function {:this} out String is {
        return this.val
    }
}

G: class {
    item: t
    grab: function {:this} out t is {
        return this.item
    }
} as { t: Any.generic }

main: function is {
    h: H val: "hi".string
    print "\{h.peek}"
    g: G item: "yo".string
    print "\{g.grab}"
}
